add login api schema
